# Lets-play-with-dead-parrot

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
dataset/: dmd.json
dmd/20260412_234124619198_embeddings/: config.json  corpus_embeddings.npy
examples/: dmd.json
